# mongooseJai

./: .gitignore  build.sh  generate.jai  helpers.jai  module.jai  module_linux.jai  module_windows.jai
mongoose/: CMakeLists.txt  mongoose.c  mongoose.h
mongoose/examples/stm32/nucleo-f429zi-cube-baremetal/Core/Src/: main.c
mongoose/examples/stm32/nucleo-f429zi-cube-freertos/Core/Src/: main.c
mongoose/examples/stm32/nucleo-f746zg-cube-baremetal/Core/Src/: main.c
mongoose/examples/stm32/nucleo-f746zg-cube-freertos/Core/Src/: main.c
mongoose/examples/stm32/nucleo-h743zi-cube-baremetal/Core/Src/: main.c
mongoose/examples/stm32/nucleo-h743zi-cube-freertos/Core/Src/: main.c
mongoose/src/: http.c
